<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Downtown</string>
    <string name="inapp_name">Downtown</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="img_desc">Random Image</string>
	<string name="test">Test</string>
	<string name="show">Show</string>
	<string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>
	<string name="search">Search</string>
	<string name="nodata">No Data</string>
	<string name="category">Βρίσκεστε στον κλάδο:</string>
	<string name="found">Βρέθηκαν</string>
	<string name="products">Καταχωρήσεις</string>
	<string name="mapgr">Χάρτης</string>
	<string name="favsgr">Αγαπημένα</string>
	<string name="address_label">Διεύθυνση</string>
	<string name="area_label">Περιοχή</string>
	<string name="comm_label">Τηλέφωνα</string>
	<string name="categ_label">Κατηγορία</string>
	<string name="desc_label">Πληροφoρίες</string>
	<string name="site_label">Ιστοσελίδα</string>
	<string name="home">Home</string>
	<string name="close">Κλείσιμο</string>
	<string name="empty">-</string>
	<string name="tels_label">Σταθερό και Κινητό Τηλέφωνο</string>
	<string name="fax_label">Fax Τηλέφωνο</string>
	<string name="scroll">Scroll</string>
	<string name="share">Share</string>
	<string name="delete">Διαγραφή</string>
	<string name="more">Περισσότερα</string>
	<string name="freeentry">Δωρεάν Καταχώρηση</string>
	<string name="info">Πληροφορίες</string>
	<string name="more_imgs_label">Κατεβασμα Εικόνων</string>
	<string name="contact">Επικοινωνία</string>
	<string name="selected">Επιλέχθηκαν</string>
	<string name="search_hint">Τι,Ποιός,Περιοχή/Διεύθυνση,Τηλέφωνο,Περιγραφή</string>
	<string name="nearby">Κοντά μου</string>
	<string name="no_maps">Οι χάρτες δεν είναι διαθέσιμοι.</string>
	<string name="download">Downloading&#8230;</string>
		<string name="normal">Κανονικός</string>
	<string name="hybrid">Υβριδικός</string>
	<string name="satellite">Δορυφόρικός</string>
	<string name="terrain">Γεωφυσικός</string>
	<string name="filters">Φίλτρα</string>
	<string name="all">Όλα</string>
	<string name="with_website">Με Ιστοσελίδα</string>
	<string name="char_limit">Απαιτούνται τουλαχιστον 3 χαρακτήρες</string>
	<string name="query_hint">Τι,Ποιός,Περιοχή/Διεύθυνση,Τηλέφωνο,Περιγραφή</string>
	<string name="this_is_home">Αυτή ειναι η αρχική!</string>
	<string name="no_internet">Δεν υπάρχει σύνδεση στο internet.</string>
	<string name="check_for_updates">Έλεγχος για ενημερώσεις&#8230;</string>
	<string name="calculating_file_size">Υπολογισμός Μεγέθους Αρχείων&#8230;</string>
	<string name="downlading_new_data">Μεταφόρτωση νέων δεδομένων&#8230;</string>
	<string name="updates">Ενημερώσεις</string>
	<string name="updates_found">Βρέθηκαν νέες καταχωρήσεις. Θέλετε να γίνει ενημέρωση;</string>
	<string name="update_later">Ενημέρωση Αργότερα</string>
	<string name="update_now">Ενημέρωση Τώρα</string>
	<string name="updating_categories">Ενημερώση Κατηγοριών</string>
	<string name="updating_companies">Ενημερώση Καταχωρήσεων</string>
	<string name="updating_keywords">Ενημερώση Keywords</string>
	<string name="updating_images">Ενημερώση Εικόνων</string>
	<string name="saving_new_data">Αποθήκευση Νέων Δεδομένων</string>
	<string name="downloading_images">Κατεβασμα Εικόνων</string>
</resources>
