<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:compat="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/toMainHome"
          android:icon="@drawable/ic_title_home_default"
          android:title="@string/home"
          compat:showAsAction="ifRoom"/>    
    <item android:id="@+id/menu_search"
          android:title="@string/search"
          android:icon="@drawable/ic_action_search"
          compat:iconifiedByDefault="true"
          compat:showAsAction="ifRoom|collapseActionView"
          compat:actionViewClass="android.support.v7.widget.SearchView" />
	<item android:id="@+id/delete"
          android:icon="@drawable/ic_action_content_discard"
          android:title="@string/delete"
          compat:showAsAction="ifRoom"/>  
   

</menu>
