<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    android:gravity="bottom"
    android:layout_gravity="bottom">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"	    
	    android:orientation="vertical">
	
        <org.dklisiaris.downtown.widgets.AspectRatioImageView
		    android:src="@null" 
		    android:id="@+id/banner"
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent" 
		    android:layout_marginTop="?attr/actionBarSize"
		    android:adjustViewBounds="true" />
	    
	    <ListView
	        android:id="@+id/list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"	        
			android:divider="#b5b5b5"
	        android:dividerHeight="0.3dp"
	        android:listSelector="@drawable/tablist_selector" />
	    
		<TextView android:id="@id/android:empty"
		      android:layout_width="match_parent"
		      android:layout_height="match_parent"
		     />
	 		
	</LinearLayout>
  
	<LinearLayout	   
        android:orientation="vertical"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	>
		
	    <RelativeLayout
	        android:id="@+id/panel_top"
	        android:background="@drawable/actionbar_btn"	        
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:paddingTop="14dp"
    		android:paddingBottom="14dp" >
    		
			<TextView
			    android:id="@+id/filters_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_centerHorizontal="true"
		        android:fontFamily="sans"
		        android:textStyle="bold"
		        android:text="@string/filters"
		        android:textColor="#f3f3f3"		        		        
		        android:textSize="20sp" />
	        
			 <ImageView
			   android:id="@+id/collapse_icon"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"	
			   android:layout_toRightOf="@+id/filters_label"	   				   
			   android:contentDescription="@string/img_desc"
			   android:layout_centerVertical="true"
			   android:layout_marginLeft="10dip"
			   android:src="@drawable/ic_navigation_collapse" 
			    />
        </RelativeLayout>
	    	    	   
	    <RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:weightSum="1.0"
		    android:paddingTop="12dp"
		    android:paddingBottom="12dp"
		    android:gravity="center"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/website_all"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="18sp"
		        android:textStyle="bold"
		        android:text="@string/all"
		        android:checked="true" 			        
 				android:gravity="center"
 				android:layout_weight="0.4"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/website_only"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="18sp"
		        android:textStyle="bold"
		        android:text="@string/with_website"			        
				android:gravity="center"
				android:layout_weight="0.5"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>

   		<TextView
	      	android:layout_width="fill_parent"
	      	android:layout_height="wrap_content"
	      	android:gravity="center"
	      	android:fontFamily="sans-serif-thin"
	      	android:paddingTop="12dp"
			android:paddingBottom="12dp"
			android:background="@drawable/list_selector"
			android:layout_gravity="center"
	      	android:textSize="20sp"
	      	android:text="@string/area_label"
	     />
	    
	    <ListView
	        android:id="@+id/list2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:divider="#b5b5b5"
	        android:dividerHeight="0.3dp"
	        android:choiceMode="multipleChoice" />
    </LinearLayout>
    
</com.sothree.slidinguppanel.SlidingUpPanelLayout>

